<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="343dp"
        android:layout_height="190dp"
        android:layout_marginTop="24dp"
        android:foreground="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nama"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="90dp"
            android:accessibilityLiveRegion="none"
            android:text="@string/briliantino_abhista_prabandanu"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/nama2"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="35dp"
            android:accessibilityLiveRegion="none"
            android:text="@string/a11_2018_11590"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="23sp"
            android:textStyle="bold" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="127dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/foto" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/hobby"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="343dp"
        android:layout_height="32dp"
        android:text="@string/design_menonton_film_mendengarkan_lagu"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="341dp"
        android:layout_height="51dp"
        android:text="@string/manusia_biasa_yang_masih_bingung_mau_ngapain"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>